# isc

./: CMakeLists.txt  Dockerfile  README.md  build_in_docker  compile_for_each_arch  config_for_scripts  install_compilers
examples/: CMakeLists.txt  main.cpp
include/isc/: isc.h
include/isc/detail/: arch.h
include/isc/detail/arch/: aarch64.h  arm.h  i386.h  mips.h  mipsn32.h  ppc.h  ppc64.h  riscv64.h  x32.h
src/: CMakeLists.txt  isc.cpp  syscall.cpp
src/asm/: CMakeLists.txt
src/asm/aarch64/: syscall_cp.s
src/asm/i386/: syscall_cp.s
src/asm/x86_64/: syscall_cp.s
src/cmake/: TargetArch.cmake
