set (TARGET_NAME isc_asm)

if (${TARGET_ARCH} STREQUAL "TARGET_X86_64")
    add_library(${TARGET_NAME} OBJECT x86_64/syscall_cp.s)  
elseif (${TARGET_ARCH} STREQUAL "TARGET_I386")
    add_library(${TARGET_NAME} OBJECT i386/syscall_cp.s)  
elseif (${TARGET_ARCH} STREQUAL "TARGET_X32")
    add_library(${TARGET_NAME} OBJECT x32/syscall_cp.s x32/syscall_cp_fixup.c)  
elseif (${TARGET_ARCH} STREQUAL "TARGET_ARM")
    add_library(${TARGET_NAME} OBJECT arm/syscall_cp.s)  
elseif (${TARGET_ARCH} STREQUAL "TARGET_AARCH64")
    add_library(${TARGET_NAME} OBJECT aarch64/syscall_cp.s)  
elseif (${TARGET_ARCH} STREQUAL "TARGET_PPC")
    add_library(${TARGET_NAME} OBJECT powerpc/syscall_cp.s) 
elseif (${TARGET_ARCH} STREQUAL "TARGET_PPC64")
    add_library(${TARGET_NAME} OBJECT powerpc64/syscall_cp.s)  
elseif (${TARGET_ARCH} STREQUAL "TARGET_MIPS")
    add_library(${TARGET_NAME} OBJECT mips/syscall_cp.s)  
elseif (${TARGET_ARCH} STREQUAL "TARGET_MIPS64")
    add_library(${TARGET_NAME} OBJECT mips64/syscall_cp.s)  
elseif (${TARGET_ARCH} STREQUAL "TARGET_MIPSN32")
    add_library(${TARGET_NAME} OBJECT mipsn32/syscall_cp.s)  
elseif (${TARGET_ARCH} STREQUAL "TARGET_RISCV64")
    add_library(${TARGET_NAME} OBJECT riscv64/syscall_cp.s)  
else()
    message(FATAL_ERROR "Unsupported architecture: ${TARGET_ARCH}")
endif()
